--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>ros2_bag_extractor</name>
   <version>0.0.0</version>
-  <description>Interface</description>
+  <description>extracting rosbag2 data in python for usage</description>
   <maintainer email="BlackTea12@github.com">Yaeohn Kim</maintainer>
   <license>TODO</license>
 
