--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>extracting rosbag2 data in python for usage</description>
   <maintainer email="BlackTea12@github.com">Yaeohn Kim</maintainer>
-  <license>TODO</license>
+  <license>BSD 2</license>
 
   <depend>rclpy</depend>
   <depend>rosbag2_py</depend>
